--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,5 +1,5 @@
-musicbrainzproxydbus (_VERSION_-2jldupont1~_DIST_1)  _DIST_; urgency=low
+musicbrainz-proxy-dbus (_VERSION_-2jldupont1~_DIST_1)  _DIST_; urgency=low
 
-  * fixed "not found" counter
+  * v2.0 with Tracks signal 
  
  -- Jean-Lou Dupont <jl@jldupont.com>  Mon, 31 May 2010 07:17:00 -0500
