--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,5 +1,5 @@
 musicbrainz-proxy-dbus (_VERSION_-3jldupont1~_DIST_1)  _DIST_; urgency=low
 
-  * v2.0 with Tracks signal 
+  * v2.1: added protection against MB webservice failures 
  
- -- Jean-Lou Dupont <jl@jldupont.com>  Mon, 31 May 2010 07:17:00 -0500
+ -- Jean-Lou Dupont <jl@jldupont.com>  Wed, 02 Jun 2010 07:17:00 -0500
