--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,5 +1,5 @@
-musicbrainz-proxy-dbus (_VERSION_-4jldupont1~_DIST_1)  _DIST_; urgency=low
+musicbrainz-proxy-dbus (_VERSION_-2jldupont1~_DIST_1)  _DIST_; urgency=low
 
-  * v2.2: minor change: track_mbid will never be "None" anymore 
+  * v2.4: added statistics e.g. total records, job queue depth etc.
  
- -- Jean-Lou Dupont <jl@jldupont.com>  Fri, 04 Jun 2010 07:17:00 -0500
+ -- Jean-Lou Dupont <jl@jldupont.com>  Tue, 08 Jun 2010 07:17:00 -0500
