--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,5 +1,5 @@
 musicbrainz-proxy-dbus (_VERSION_-2jldupont1~_DIST_1)  _DIST_; urgency=low
 
-  * v2.4: added statistics e.g. total records, job queue depth etc.
+  * v2.5: added "artist name" based filtering (common cases) & "filtered" statistics
  
  -- Jean-Lou Dupont <jl@jldupont.com>  Tue, 08 Jun 2010 07:17:00 -0500
