--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,5 +1,5 @@
 musicbrainz-proxy-dbus (_VERSION_-1jldupont1~_DIST_1)  _DIST_; urgency=low
 
-  * v2.8
+  * _VERSION_
  
- -- Jean-Lou Dupont <jl@jldupont.com>  Sun, 13 Jun 2010 21:00:00 -0500
+ -- Jean-Lou Dupont <jl@jldupont.com>  _DATE_
